# MR-in-MARL

./: .gitignore  .mypy.ini  README.md  build.py  log_server.sh  pyproject.toml  setup.py  test_extract_tf_data.py  train.py  training.sh
diagram_gen/: efficency-gen.py  plots.py
diagram_gen/config/: plot_config.py
diagram_gen/schemas/: exp_file.py
diagram_gen/utils/: diagram_loader.py  file_loader.py
examples/: melting_pot.py
src/: __init__.py  cfg_manager.py  config.py  replay.py  training.py  training.pyx  training_test.py
src/agents/: __init__.py  a2c.py  a2c.pyx  agent_type_e.py  agents_gym_i.py  agents_helper.py  agents_i.py  gifiting.py  gifting.pyx  lola_org.py  lola_pg.py  mate.py  mate.pyx  mr_agent_a2c.py  mr_agent_a2c.pyx  random_agents.py  random_agents.pyx
src/agents/env_specific/: demo_ma.py
src/agents/implementations/: __init__.py  a2c.py  a2c2.py  actor_critic.py  actor_critic_td0.py  actor_critic_td_lamda_back.py  actor_critic_v2.py  demo_ma.py  demo_ma_coin.py  demo_manipulatio_agent.py  demo_manipulation_agent.py  mr_agent.py  random_agents.py
src/agents/old/: actor_critic.py
src/agents/utils/: agents_helper.py  network.py  network.pyx  reward_normalization.py  state_value_network.pyx
src/config/: __init__.py  actor_critic_config.py  base_ctrl_config.py  ctrl_config.py  env_config.py  eval_config.py  log_config.py  ma_ac_config.py  pygame_config.py  replay_config.py  training_config.py
src/config/ctrl_configs/: a2c_config.py  actor_critic_config.py  ctrl_config.py  demo_ma_coin.py  (+1 more)
src/controller/: actor_critic.py  base_rmp.py  gifting.py  lola_pg.py  manipulation_agent.py  mate.py  random_agents.py  rm_wrapper.py
src/controller_ma/: central_ma_ac_percentage.py  central_ma_fix_percentage.py  central_ma_heuristic_coin_game.py  central_ma_heuristic_ipd.py  individual_ma_ac_p_global_metric.py  individual_ma_ac_percentage.py  no_ma_controller.py
src/enums/: __init__.py  agent_type_e.py  env_type_e.py  manipulation_modes_e.py  metrics_e.py
src/enviroments/: __init__.py  aec_envs.py  env_builder.py  env_helper_aec.py  env_helper_parallel.py  parallel_envs.py
src/envs/: __init__.py  env_builder.py  env_setup_aec.py  env_setup_parallel.py
src/interfaces/: __init__.py  agents_i.py  controller_i.py  ma_controller_i.py
src/utils/: data_loader.py  gym_utils.py  utils.py
src_old/old/: a2c.py  actor_critic.py  actor_critic_v2.py  mr_agent.py  policy_network.py
(+57 files in other folders)
