[tool.poetry]
name = "mr-in-marl"
version = "0.0.1"
description = "manipulating rewards in marl environments"
authors = [
    "Llewellyn Hochhauser <llewellyn.hochhauser@hochhauser.io>",
]
packages = [{ include = 'src' }]


[tool.poetry.dependencies]
python = ">=3.10.11,<3.12"
pydantic = { extras = ["dotenv"], version = "^2.4.2" }
pydantic-settings = "^2.0.2"
numpy = "^1.25.2"
torch = [
    { version = "==2.1.1", markers = "platform_machine!='x86_64' or sys_platform=='darwin'", source = "pypi" },
    { version = "==2.1.1+cpu", markers = "platform_machine=='x86_64' and sys_platform!='darwin'", source = "torchcpu" },
]
pettingzoo = { extras = ["mpe"], version = "^1.24.1" }
pygame = "^2.3.0"
stable-baselines3 = "^2.0.0"
supersuit = "^3.9.0"
tensorboard = "^2.14.1"
names = "^0.3.0"
pyyaml = "^6.0"
pandas = "^2.1.1"
scipy = "^1.11.4"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
pytest = "^7.4.3"
cython = "^3.0.7"
mpld3 = "^0.5.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0 "
mypy = "^1.5.1"


[[tool.poetry.source]]
name = "torchcpu"
url = "https://download.pytorch.org/whl/cpu/"
priority = "explicit"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "src.training:main"
